# two-stage-conrag

./: .dockerignore  .env_example  .gitignore  CHANGELOG.md  Dockerfile  README.md  makefile  pyproject.toml  pytest.ini  requirements-fallback.txt  requirements-local.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets_example.toml
backend/: README.md  __init__.py  requirements.txt  settings.py
backend/my_lib/: LLMManager.py  __init__.py  hybrid_retrieval.py  pdf_manager.py  qa_chains.py  retrievers.py
configs/: config.yaml
frontend/: app-dummy.py  app.py  helper_gui.py  requirements.txt
modal/: modal_app.py  modal_streamlit.py
notebooks/: RAG_evaluate.ipynb  pipeline_evaluator.ipynb  requirements_dev.txt
scripts/: vstore_creator.py
src/: app.py  helper_functions.py
tests/: conftest.py
tests/unit/: test_pdf_manager.py  test_qa_chains.py  test_retrievers.py
